<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="T_CURRENT_TRANSACTION" Id="{ea74647b-ca51-4f23-8681-1dace0b58dee}">
    <Declaration><![CDATA[TYPE T_CURRENT_TRANSACTION :
STRUCT
	STATION_NUMBER_LOAD : BYTE :=1;
	STATION_NUMBER_RETURN : BYTE :=1;
    CURRENT_DEVICE_COUNT : BYTE :=0;
	QUANTITY_MAX : BYTE :=0;
	QUANTITY_LOTEND :BYTE :=0;
	JIG_INDEX_LOAD : BYTE :=1;
	JIG_INDEX_RETURN : BYTE :=1;
	JIG_INDEX_LOAD_NG : BYTE :=1;
	JIG_INDEX_RETURN_NG : BYTE :=1;
	TRANSPORT_INDEX : BYTE :=1;
	PO_NUMBER : STRING[255] := '';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>