<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="INPUT_G6_VAR" Id="{3d092d46-979b-4b17-ad1e-c0fe61b9d376}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
G6_INPUT AT %IB00 :  	BYTE;
G6_INPUT_1 AT %IB01 : 	BYTE;
G6_INPUT_2 AT %IB02 : 	BYTE;
G6_INPUT_3 AT %IB03 :	BYTE;
COUNTER_FUKUDA_A AT %IB06 :	BYTE;
COUNTER_FUKUDA_B AT %IB07 :	BYTE;
G6_ERROR1  AT %IB08 :	BYTE;
G6_ERROR2  AT %IB09 :	BYTE;
G6_OUTPUT AT %QB00 : 	BYTE;
G6_OUTPUT_1 AT %QB01 : BYTE;
G6_OUTPUT_2 AT %QB02 : BYTE;
START_POSITION AT %QB03 : BYTE :=1;

I_CMDERROR AT %IX09.6 :BOOL;
I_G6_READY  AT %IX0.0 :BOOL;
I_G6_RUNNING  AT %IX0.1 :BOOL;
I_G6_PAUSED  AT %IX0.2 :BOOL;
I_G6_ERROR  AT %IX0.3 :BOOL;
I_G6_ESTOPON  AT %IX0.4 :BOOL;
I_G6_SAFEGUARDON  AT %IX0.5 :BOOL;
I_G6_SERROR  AT %IX0.6 :BOOL;
I_G6_WARNING  AT %IX0.7 :BOOL;

I_G6_MOTORON  AT %IX1.0 :BOOL;
I_G6_ATHOME  AT %IX1.1 :BOOL;
I_G6_AUTOMODE  AT %IX1.5 :BOOL;
	
I_G6_END_CYCLE  AT %IX3.0 :BOOL;
I_G6_END_FUKUDA  AT %IX3.1 :BOOL;
I_G6_READY_TAKEUP  AT %IX3.2 :BOOL;//CYCLE RUNNING INDICATOR
I_G6_START_TAKEUP  AT %IX3.3 :BOOL;
I_G6_READY_PLACING  AT %IX3.4 :BOOL;
I_G6_START_PLACING  AT %IX3.5 :BOOL;
I_READY_CONTINUE  :BOOL;


	
	O_G6_START AT %QX00.0  : BOOL;	
	O_G6_SELECT_FUKUDA_A AT %QX00.1  : BOOL;
	O_G6_SELECT_FUKUDA_B AT %QX00.2  : BOOL;
	O_G6_STOP AT %QX00.4  : BOOL;
	O_G6_PAUSE AT %QX00.5  : BOOL;

	O_G6_RESET AT %QX00.7  : BOOL;	
	
	O_G6_SETMOTORON AT %QX01.0  : BOOL;
	O_G6_SETMOTOROFF AT %QX01.1  : BOOL;
	O_G6_HOME AT %QX01.2  : BOOL;
	O_G6_RESET_COUNTER_PICK AT %QX01.5  : BOOL:=FALSE;
	O_G6_CONTINUE AT %QX01.6  : BOOL;
	
I_G6_GRIPPER_CLOSE_1 AT %I* : BOOL;
I_G6_GRIPPER_CLOSE_2 AT %I* : BOOL;
I_G6_GRIPPER_CLOSE_3 AT %I* : BOOL;
I_G6_GRIPPER_CLOSE_4 AT %I* : BOOL;
I_G6_GRIPPER_OPEN_1 AT %I* : BOOL;
I_G6_GRIPPER_OPEN_2 AT %I* : BOOL;
I_G6_GRIPPER_OPEN_3 AT %I* : BOOL;
I_G6_GRIPPER_OPEN_4 AT %I* : BOOL;
I_G6_GRIPPER_EXT_DOWN_1 AT %I* : BOOL;
I_G6_GRIPPER_EXT_DOWN_2 AT %I* : BOOL;
I_G6_GRIPPER_EXT_DOWN_3 AT %I* : BOOL;
I_G6_GRIPPER_EXT_DOWN_4 AT %I* : BOOL;
I_G6_GRIPPER_EXT_UP_1 AT %I* : BOOL;
I_G6_GRIPPER_EXT_UP_2 AT %I* : BOOL;
I_G6_GRIPPER_EXT_UP_3 AT %I* : BOOL;
I_G6_GRIPPER_EXT_UP_4 AT %I* : BOOL;

	O_G6_GRIPPER_CLOSE_1 AT %Q* : BOOL;
	O_G6_GRIPPER_CLOSE_2 AT %Q* : BOOL;
	O_G6_GRIPPER_CLOSE_3 AT %Q* : BOOL;
	O_G6_GRIPPER_CLOSE_4 AT %Q* : BOOL;
	O_G6_GRIPPER_OPEN_1 AT %Q* : BOOL;
	O_G6_GRIPPER_OPEN_2 AT %Q* : BOOL;
	O_G6_GRIPPER_OPEN_3 AT %Q* : BOOL;
	O_G6_GRIPPER_OPEN_4 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_DOWN_1 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_DOWN_2 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_DOWN_3 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_DOWN_4 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_UP_1 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_UP_2 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_UP_3 AT %Q* : BOOL;
	O_G6_GRIPPER_EXT_UP_4 AT %Q* : BOOL;

IX_G6_GRIPPER_1 AT %IX2.0 : BOOL;
IX_G6_GRIPPER_2 AT %IX2.1 : BOOL;
IX_G6_GRIPPER_3 AT %IX2.2 : BOOL;
IX_G6_GRIPPER_4 AT %IX2.3 : BOOL;

IX_G6_GRIPPER_EXT_1 AT %IX2.4 : BOOL;
IX_G6_GRIPPER_EXT_2 AT %IX2.5 : BOOL;
IX_G6_GRIPPER_EXT_3 AT %IX2.6 : BOOL;
IX_G6_GRIPPER_EXT_4 AT %IX2.7 : BOOL;
(*
	OX_G6_GRIPPER_1 AT %QX02.0 : BOOL;
	OX_G6_GRIPPER_2 AT %QX02.1 : BOOL;
	OX_G6_GRIPPER_3 AT %QX02.2 : BOOL;
	OX_G6_GRIPPER_4 AT %QX02.3 : BOOL;

	OX_G6_GRIPPER_EXT_1 AT %QX02.4 : BOOL;
	OX_G6_GRIPPER_EXT_2 AT %QX02.5 : BOOL;
	OX_G6_GRIPPER_EXT_3 AT %QX02.6 : BOOL;
	OX_G6_GRIPPER_EXT_4 AT %QX02.7 : BOOL;
*)
GRIPPER_OPEN_1 AT %QX02.0 : BOOL;
GRIPPER_CLOSE_1 AT %QX02.1 : BOOL;
GRIPPER_OPEN_2 AT %QX02.2 : BOOL;
GRIPPER_CLOSE_2 AT %QX02.3 : BOOL;
GRIPPER_OPEN_3 AT %QX02.4 : BOOL;
GRIPPER_CLOSE_3 AT %QX02.5 : BOOL;
GRIPPER_OPEN_4 AT %QX02.6 : BOOL;
GRIPPER_CLOSE_4 AT %QX02.7 : BOOL;
IX_G6_FINISH AT %I* : BOOL;
I_G6_HANG : BOOL;
I_G6_ENABLE :BOOL;
I_G6_DISABLE :BOOL;
GO_ROBOT :BOOL;
I_MAX_DEVICE:BYTE:=80;
		
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>